利用aui和APICloud开发混合app

--- a/gao_app/html/addrs.html
+++ b/gao_app/html/addrs.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" type="text/css" href="../css/aui.css" />
     <style>
         body{background: #fff;}
+        .my-header {
+            padding-top: 20px;
+        }
         .aui-list-view-cell p{color: #333;}
         .aui-checkbox{margin: 8px 15px 0 2px;width: 22px;height: 22px;}
         .aui-list-view-cell:after{border-bottom: none;}
@@ -29,7 +32,7 @@
 
 <body>
 
-    <header class="aui-bar aui-bar-nav aui-bar-warning">
+    <header class="aui-bar aui-bar-nav aui-bar-warning my-header">
         <a class="aui-pull-left" onclick="close_myaccount()">
             <span class="aui-iconfont aui-icon-left"></span>
         </a>
