--- a/gao_app/html/findPwd.html
+++ b/gao_app/html/findPwd.html
@@ -7,6 +7,9 @@
     <title>找回密码</title>
     <link rel="stylesheet" type="text/css" href="../css/aui.css" />
     <style>
+        .my-header {
+            padding-top: 20px;
+        }
         body{background: #fff;}
         .aui-input-row{
             width: 90%;
@@ -22,7 +25,7 @@
 
 <body>
 
-    <header class="aui-bar aui-bar-nav aui-bar-warning">
+    <header class="aui-bar aui-bar-nav aui-bar-warning my-header">
         <a class="aui-pull-left" onclick="close_myaccount()">
             <span class="aui-iconfont aui-icon-left"></span>
         </a>
