--- a/gao_app/html/newAddr.html
+++ b/gao_app/html/newAddr.html
@@ -7,6 +7,9 @@
     <title>添加新地址</title>
     <link rel="stylesheet" type="text/css" href="../css/aui.css" />
     <style>
+        .my-header {
+            padding-top: 20px;
+        }
         .aui-input-row,.aui-list-view-cell{
             width: 100%;
             /*margin: 0 auto;*/
@@ -27,7 +30,7 @@
 
 <body>
 
-    <header class="aui-bar aui-bar-nav aui-bar-warning">
+    <header class="aui-bar aui-bar-nav aui-bar-warning my-header">
         <a class="aui-pull-left" onclick="close_myaccount()">
             <span class="aui-iconfont aui-icon-left"></span>
         </a>
