--- a/index.html
+++ b/index.html
@@ -3,7 +3,18 @@
 <head>
     <meta charset="utf-8">
 </head>
+
+<link rel="stylesheet/less" type="text/css" href="style.less" />
+<style>
+    .line{display: inline-block;width: 20%;height: 4px;background: orange;}
+</style>
 <body>
+
+
 <script src="bin/app.bundle.js" charset="utf-8"></script>
+<script>
+    var date = new Date();
+    console.log(date)
+</script>
 </body>
 </html>
