--- a/gao_app/index.html
+++ b/gao_app/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/aui-iconfont.css" />
     <link rel="stylesheet" type="text/css" href="css/aui-slide.css" />
     <link rel="stylesheet" type="text/css" href="css/aui-flex.css" />
+    <!--<link rel="stylesheet/less" type="text/css" href="css/style.less" />-->
 </head>
 <style type="text/css">
 body { background: #fff;}
@@ -419,6 +420,7 @@ p { font-size: 12px; margin-bottom: 5px;}
 
 
 </body>
+<!--<script src="script/less.min.js"></script>-->
 <script type="text/javascript" src="script/api.js" ></script>
 <script type="text/javascript" src="script/aui-slide.js"></script>
 <script type="text/javascript">
