会员中心页面调整

--- a/VIP Center/center.html
+++ b/VIP Center/center.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/vip_relative.css">
 </head>
 <body class="center_bd">
-<div class="get_card_cont center_hd">
+<div class="get_card_cont center_hd" style="background-image: url('images/vip.jpg');background-size: 100%;">
     <img class="logo_img" src="vip_center/LOGO.png" alt="">
     <div>
         <p class="card_tle">健康仁生药房</p>
