--- a/VIP Center/mycards.html
+++ b/VIP Center/mycards.html
@@ -124,8 +124,8 @@
                             '<img class="weui_media_appmsg_thumb full_img" ' +
                             'src="vips_center/stores.png" alt="商家logo"></div>' +
                             '<div class="weui_media_bd rt_info_cont"><h3 class="weui_media_title center_in_title">' +
-                            '某某优惠券</h3><p class="gray_font">适用店：<span>优衣库</span></p><div><p class="egt_font">数量剩余：' +
-                            '<span>120</span></p><a href="javascript:;" class="get_cuppon_btn"><input class="cget_btn" type="button" value="立即使用"/>' +
+                            '某某优惠券</h3><p class="gray_font">适用店：<span>优衣库</span></p><div><a href="javascript:;" ' +
+                            'class="get_cuppon_btn"><input class="cget_btn" type="button" value="立即使用"/>' +
                             '<span class="rt_arrow"></span></a></div></div></div>';
                     box.html(child);
 
