增加页面，原有页面样式修改

--- a/nyProject/html/index.html
+++ b/nyProject/html/index.html
@@ -21,6 +21,12 @@
         <!--头部-->
         <div class="ny-head">
 
+            <div class="pull-left">
+                <a href="index.html" class="logo-cont">
+                    <img class="img-responsive ny-logo" src="../images/ny_logo.png" alt="logo">
+                </a>
+            </div>
+
             <div class="pull-right head-right">
                 <ul class="pull-right list-unstyled hd-ul">
                     <li class="pull-left"><a href="javascript:;" onclick="SetHome();">设为首页</a>&nbsp;<span>|</span>&nbsp;</li>
@@ -226,8 +232,8 @@
                     </div>
 
                     <div class="clear">
-                        <ul class="list-unstyled rules-infos-ul">
-                            <li><span class="li-icon"></span><a href="#" class="n-infos">国务院关于深化制造业与互联网融合发展的指导</a></li>
+                        <ul class="list-unstyled rules-infos-ul mid-ul">
+                            <li><span class="li-icon"></span><a href="#" class="n-infos">国务院关于深化制造业与互联网融252525合发展的指导</a></li>
                             <li><span class="li-icon"></span><a href="#" class="n-infos">国务院关于深化制造业与互联网融合发展的指导</a></li>
                             <li><span class="li-icon"></span><a href="#" class="n-infos">国务院关于深化制造业与互联网融合发展的指导</a></li>
                             <li><span class="li-icon"></span><a href="#" class="n-infos">国务院关于深化制造业与互联网融合发展的指导</a></li>
