--- a/nyProject/html/ny_elegance.html
+++ b/nyProject/html/ny_elegance.html
@@ -218,7 +218,8 @@
 
                     <div id="yquShe">
 
-                        <p class="rtmain-title">园区设施</p>
+                        <p class="rtmain-title">园区设施<a href="more_yuan.html" class="pull-right">更多</a></p>
+
                         <div class="yuanqu-mainintros">
 
                             <div id="myCarousel" class="carousel slide" data-ride="carousel">
