园区更多样式修改……

--- a/nyProject/html/more_yuan.html
+++ b/nyProject/html/more_yuan.html
@@ -190,6 +190,8 @@
     </div>
 
     <script>
+
+//        点击小图片显示大图
         $(document).on('click','.img-thumbnail',function(){
             var img_src = $(this).attr('src');
             $('.big-img').attr('src',img_src);
