--- a/nyProject/html/ny_elegance.html
+++ b/nyProject/html/ny_elegance.html
@@ -15,6 +15,7 @@
 
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/intros.css">
+    <!--<link rel="stylesheet" href="../css/hide_left.css">-->
 
 </head>
 <body>
@@ -78,9 +79,9 @@
                         <p class="had-bd-botom intro-title">园区风采</p>
                         <div class="y-cont">
                             <ul class="list-unstyled intros-ul">
-                                <li class="intro-title yshe"><span class="li-icon"></span><a href="javascript:;">园区设施</a></li>
-                                <li class="intro-title cpany-center"><span class="li-icon"></span><a href="javascript:;">企业中心</a></li>
-                                <li class="intro-title acti-li"><span class="li-icon"></span><a href="javascript:;">活动掠影</a></li>
+                                <li class="intro-title yshe"><span class="li-icon"></span><a href="#yquShe">园区设施</a></li>
+                                <li class="intro-title cpany-center"><span class="li-icon"></span><a href="#cpanyCenter">企业中心</a></li>
+                                <li class="intro-title acti-li"><span class="li-icon"></span><a href="#actiCont">活动掠影</a></li>
                             </ul>
                         </div>
                     </div>
