--- a/nyProject/html/ny_elegance.html
+++ b/nyProject/html/ny_elegance.html
@@ -86,7 +86,7 @@
                         </div>
                     </div>
 
-                    <div class="has-border mag-top">
+                    <div class="has-border mag-top phone_hide">
                         <p class="had-bd-botom intro-title"><span class="pull-left">公告通知</span><a href="#" class="pull-right">更多</a></p>
                         <div class="y-cont">
                             <ul class="list-unstyled note-ul">
@@ -97,7 +97,7 @@
                         </div>
                     </div>
 
-                    <div class="has-border mag-top">
+                    <div class="has-border mag-top phone_hide">
                         <p class="had-bd-botom intro-title"><span class="pull-left">热点文章</span><a href="#" class="pull-right">更多</a></p>
                         <div class="y-cont">
                             <ul class="list-unstyled note-ul">
