--- a/2017-trymyvue/register_one.html
+++ b/2017-trymyvue/register_one.html
@@ -6,6 +6,7 @@
     <meta name="format-detection" content="telephone=no,email=no,date=no,address=no">
     <title>注册</title>
     <link rel="stylesheet" type="text/css" href="css/aui.css" />
+    <script src="https://unpkg.com/vue/dist/vue.js"></script>
     <style type="text/css">
     body {
         height: auto;
